...
                .onDelete(perform: deleteMeal)
            }
            .environment(
                \.editMode,
                .constant(self.isEditing ? EditMode.active : EditMode.inactive)
            )
            .navigationTitle("Lista dań")
            .sheet(isPresented: $isAddMealViewOpen){
                AddMealView(isVisible: $isAddMealViewOpen)
            }
            .toolbar {
                ToolbarItem(placement: .navigationBarLeading) {
                    Button(action: {
...
