...
                        if(message != nil){
                              Text(message!)
                        }
                        TextField(placeholder, text: $value)
                              .textFieldStyle(RoundedBorderTextFieldStyle())
                        HStack(spacing: 20) {
                              Button("Anuluj", action: {
                                    self.isVisible = false
                                    self.hideKeyboard()
                                    self.value = ""
                                    self.onCancel()
                              })
                              Button("Potwierdź", action: {
                                    self.isVisible = false
                                    self.hideKeyboard()
                                    self.onDone(self.value)
                                    self.value = ""
                              })
                        }
...
